autocomplite: off for input

--- a/neon-panel.html
+++ b/neon-panel.html
@@ -252,7 +252,7 @@
   
    <section class="section clearfix">
         <div class="neon-wrapper">
-            <input type="checkbox" class="switch" id="switch">
+            <input type="checkbox" autocomplete="off" class="switch" id="switch">
             <label for="switch" class="switch-for"><span>on/off</span></label>
 
             <aside class="neon-panel">      
